--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,91 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+
+:root {
+	--toastContainerTop: auto;
+	--toastContainerLeft: auto;
+	--toastContainerRight: 3em;
+	--toastContainerBottom: 3em;
+}
+
+@layer components {
+	.button-shadow {
+		box-shadow: -10px 9px 0px 3px #000;
+	}
+
+	.action {
+		filter: drop-shadow(-8px 9px 0px rgb(0, 0, 0, 30%));
+		transition: 300ms;
+		border: 1px solid black;
+		backdrop-filter: contrast(0.1) sepia(1) opacity(0.1);
+		color: hsl(34deg 78% 91% / 100%);
+		cursor: pointer;
+		padding: 0.5em;
+		font-size: 1.2em;
+		font-weight: bold;
+		text-transform: uppercase;
+		letter-spacing: 0.1em;
+		transition: 300ms;
+
+		@apply bg-opacity-30;
+
+		&:hover {
+			@apply bg-opacity-70;
+		}
+		/* &:hover {
+			filter: drop-shadow(-8px 9px 0px black);
+			box-shadow: -10px 9px 0px 3px #000;
+			transition: 300ms;
+			background: none;
+			border: 1px solid black;
+			backdrop-filter: contrast(0.1) sepia(1) opacity(0.1);
+			color: hsl(34deg 78% 91% / 100%);
+		} */
+	}
+
+	.action.disabled {
+		filter: drop-shadow(0px 0px 0px black);
+		background: none;
+		border: 1px solid black;
+		backdrop-filter: contrast(0.1) sepia(1) opacity(0.1);
+		color: hsl(34deg 78% 91% / 0%);
+	}
+
+	.icon-button {
+		@apply relative;
+
+		svg {
+			@apply pointer-events-none size-20 border border-black transition duration-500;
+		}
+
+		span {
+			@apply absolute -bottom-8 left-0 w-full border border-black bg-white font-extrabold lowercase text-black invert transition;
+		}
+
+		&:hover {
+			svg {
+				@apply bg-white shadow-lg invert;
+				transform: scale3d(1.3, 1.2, 1.2) translate3d(0%, 135%, 8px)
+					rotate3d(1.2, 0.4, -0.7, 62.5deg);
+				z-index: 50;
+			}
+			span {
+				filter: invert(0) drop-shadow(0px 16px 0px rgb(0 255 181 / 36%))
+					drop-shadow(0px 27px 1px rgb(0 255 181 / 21%))
+					drop-shadow(0px 38px 10px rgb(86 0 255 / 20%));
+				transform: translateY(-100.5%);
+				box-shadow:
+					0 -27px 0px 0px #000000,
+					0 -53px 52px 0 hsl(0deg 0% 100%);
+				text-shadow:
+					0px -26px 0px #ffffff,
+					0px -56px 0 #000;
+			}
+
+			.button-backdrop {
+				filter: drop-shadow(0px -53px 4px hsl(175deg 124% 59% / 48%));
+			}
+		}
+	}
+}
